2002-05-15  Andrew Bennetts <andrew-twisted@puzzling.org>

	* twisted/protocols/ftp.py: Small fixes to FTPClient that have
        changed the interface slightly -- return values from callbacks
	are now consistent for active and passive FTP.  Have a look at 
	doc/examples/ftpclient.py for details.

2002-04-28  Itamar Shtull-Trauring  <twisted@itamarst.org>

	* twisted/protocols/http.py: log hits using extended log format
        and make web taps logfile configurable.

2002-04-26  Itamar Shtull-Trauring  <twisted@itamarst.org>

	* twisted/lumberjack/logfile.py: reversed order of rotated
	logs - higer numbers are now older.

2002-04-24  Itamar Shtull-Trauring <twisted@itamarst.org>

	* twisted/python/components.py: Twisted's interfaces are now
	more like Zope's - __implements__ is an Interface subclass
	or a tuple (or tuple of tuples). Additonally, an instance can
	implement an interface even if its class doesn't have an
	__implements__.

2002-04-20  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.4.

	* twisted/internet/tcp.py: Make unix domain sockets *really*
	world-accessible, rather than just accessible by "other".

2002-04-19  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* twisted/web/{server,twcgi}.py: Fixed POST bug in distributed
	web servers.
	
2002-04-19  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.3.

2002-04-19  Glyph Lefkowitz  <carmstro@twistedmatrix.com>

	* twisted/web/distrib.py: Fix a bug where static.File transfers
	over a distributed-web connection would not finish up properly.

2002-04-18  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.2.

2002-04-18  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/news: A news server and NNTP protocol support courtesy of
	exarkun. Another step towards Twisted implementations of EVERYTHING
	IN THE WORLD!

2002-04-17  Glyph Lefkowitz  <glyph@twistedmatrix.com>
